Rename Desktop Rook → Rook

--- a/netrunner.html
+++ b/netrunner.html
@@ -865,7 +865,7 @@ const AGENT_FILES = AGENT_FILES_DATA; // populated below
 const AGENTS = [
   {
     id: 'desktop-rook',
-    name: 'Desktop Rook',
+    name: 'Rook',
     icon: '♜',
     model: 'claude-opus-4-6',
     host: 'WIN-79G2697J611 (WSL2)',
